# alpasim

./: Dockerfile  README.md  build.sh  pyproject.toml
docs/: DESIGN.md  ROS2_BRIDGE_PLAN.md  ROS2_BRIDGE_TESTING.md  TUTORIAL.md
src/controller/: pyproject.toml
src/controller/alpasim_controller/: server.py  system.py  system_manager.py
src/driver/: pyproject.toml
src/driver/src/alpasim_driver/: frame_cache.py  main.py  rectification.py  schema.py  trajectory_optimizer.py
src/eval/: pyproject.toml
src/eval/src/eval/: data.py  main.py  schema.py  video.py
src/physics/: pyproject.toml
src/physics/alpasim_physics/: backend.py  server.py
src/ros2_bridge/: package.xml  pyproject.toml  setup.cfg
src/ros2_bridge/alpasim_ros2_bridge/: bridge_node.py  clock_publisher.py  conversions.py  driver_bridge.py  sensor_publisher.py  tf_broadcaster.py  traffic_publisher.py
src/ros2_bridge/launch/: bridge.launch.py
src/ros2_bridge/tests/: conftest.py  mock_data.py  test_clock_publisher.py  test_conversions.py  test_driver_bridge.py  test_sensor_publisher.py  test_step_flow.py  test_tf_broadcaster.py  test_traffic_publisher.py
src/runtime/: pyproject.toml
src/runtime/alpasim_runtime/: __init__.py  camera_catalog.py  config.py  dispatcher.py  endpoints.py  event_loop_idle_profiler.py  logs.py  loop.py  validation.py
src/runtime/alpasim_runtime/services/: controller_service.py  driver_service.py  physics_service.py  sensorsim_service.py  service_base.py  service_pool.py  traffic_service.py
src/runtime/alpasim_runtime/simulate/: __main__.py
src/runtime/alpasim_runtime/telemetry/: metrics_analysis.ipynb  plot_metrics.py  resources.py  rpc_wrapper.py  telemetry_context.py  utils.py
src/runtime/alpasim_runtime/worker/: allocation.py  ipc.py  main.py  pool.py
src/runtime/tests/: test_camera_catalog.py  test_event_loop_idle_profiler.py  test_runtime_integration_replay.py  test_with_mocks.py  test_worker_allocation.py  test_worker_ipc.py
src/runtime/tests/data/: valid_user_config.yaml
src/tools/run-on-ord/: submit.sh
src/tools/scripts/: pinhole_to_ftheta.py
src/utils/alpasim_utils/: artifact.py
src/wizard/alpasim_wizard/: context.py  schema.py
src/wizard/configs/: base_config.yaml
src/wizard/tests/: test_port_assignment.py
(+19 files in other folders)
