[project]
name = "alpasim_workspace"
version = "0.12.0"
description = "Workspace for Alpamayo Sim development"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
]

[tool.uv.workspace]
members = [
  "src/controller",
  "src/eval",
  "src/grpc",
  "src/runtime",
  "src/utils",
  "src/physics",
  "src/tools",
  "src/driver",
  "src/ros2_bridge",
]

# This is a hacky workaround to skip installing flash attention
# which is an AR1 dependency but does not declare its own dependencies
# properly, leading to uv install errors.
# TODO: make flash attention optional in alpamayo-r1 repo.
[tool.uv]
override-dependencies = [
   "flash-attn; python_version < '0'",
]
constraint-dependencies = [
  # setuptools 82+ removed pkg_resources, which grpcio-tools 1.62.3 still needs.
  # Remove this constraint when grpcio-tools and protobuf are upgraded to 5.x+.
  "setuptools<82",
]
