<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alpasim_ros2_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 bridge for AlpaSim autonomous driving simulator</description>
  <maintainer email="todo@example.com">AlpaSim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rosgraph_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
